css/style.css
@font-face {
    font-family: 'SpaceMono';
    src: url(./fonts/SpaceMono-Regular.ttf);
}

@font-face {
    font-family: 'SpaceMono';
    src: url(./fonts/SpaceMono-Bold.ttf);
    font-weight: bold;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'SpaceMono', monospace;
}

body {
    background: #111;
    background: linear-gradient(180deg,#070707,#430815,#4c0918);
    height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.main-nav-link,
.main-nav-link:hover {
    color: inherit;
    text-decoration: none;
}

.main-navigation {
    height: 60px;
    padding: 10px;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

.main-navigation img {
    display: inline-block;
    height: 70%;
}

.main-navigation ul {
    height: 100%;
    margin-left: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    list-style: none;
}


.main-navigation ul li {
    height: 100%;
    padding-right: 15px;
    display: flex;
    align-items: center;
    color: #ccc;
    transition: 0s all;
}

.main-navigation ul li:hover {
    border-bottom: 1px solid #D51840;
    color: #D51840;
    font-weight: 700;
    transition-delay: 150ms;
}

main {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px;
}


footer {
    padding: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    color: #ddd;
}

footer h1 {
    color: #eee;
}

footer p {
    font-size: 0.8em;
}

